# internals/model/token/token.go
@@ -4,3 +4,9 @@ type Request struct {
 	User_name string
 	Password  string
 }
+
+type ReadResponseToken struct {
+	Id        int32
+	User_name string
+	Token     string
+}
